The preedit view of the candidate window should be hidden correctly when the text input client doesn't support inline composing.

BUG=612642

Review-Url: https://codereview.chromium.org/2290083002
Cr-Commit-Position: refs/heads/master@{#415225}

Former-commit-id: 2820bbca0e3e9fa68df28eb4831e8d0471926aac